changed p tags to div, fixed spacing

--- a/styles/global.css
+++ b/styles/global.css
@@ -74,7 +74,7 @@ main {
     width: 100%;
 }
 
-p {
+.arttext {
     font-size: 11px;
 }
 .article-title {
@@ -89,4 +89,8 @@ p {
 
 .big-art {
     font-size: 15px;
+}
+
+.newstype {
+    font-size: 9px;
 }
